--- a/css/style.css
+++ b/css/style.css
@@ -248,10 +248,13 @@ ____________ */
   padding-bottom: var(--my-gap);
   padding-right: calc(var(--my-gap) * 2);
 }
-
-.logo img {
+.logo-big {
   height: 40px;
   margin-bottom: 2rem;
+}
+
+.logo-small {
+  display: none;
 }
 
 .playlist-ul li {
@@ -273,11 +276,7 @@ ____________ */
   overflow: auto;
 }
 
-.aside-nav span {
-  display: block;
-}
-
-hr {
+.aside-nav hr {
   margin-top: 0.8rem;
   margin-bottom: 1.2rem;
   margin-left: 1rem;
@@ -360,6 +359,8 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
+  max-width: 400px;
   padding-top: 1.5rem;
 }
 
@@ -381,7 +382,6 @@ footer {
 }
 
 .line {
-  /* border: 2px solid; */
   background-color: gray;
   border-radius: 1px;
   max-width: 100%;
@@ -415,7 +415,7 @@ footer {
   background-color: gray;
   border-radius: 1px;
   max-width: 100%;
-  width: 10vw;
+  width: 90px;
   height: 4px;
 }
 
@@ -456,5 +456,43 @@ ____________ */
   }
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 480px) {
+  .aside-nav {
+    padding-right: 0;
+  }
+
+  .aside-nav hr {
+    display: none;
+  }
+
+  .ul-aside-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .logo-big {
+    height: 40px;
+    margin-bottom: 2rem;
+    display: none;
+  }
+
+  .logo-small {
+    width: 65px;
+    margin-bottom: 1rem;
+    display: block;
+  }
+
+  .titles-nav {
+    display: none;
+  }
+
+  .fa-plus {
+    display: none;
+  }
+
+  .playlist-ul li {
+    display: none;
+  }
 }
