--- a/css/style.css
+++ b/css/style.css
@@ -199,18 +199,19 @@ ____________ */
 .card {
   width: calc((100% / 6) - var(--my-gap));
   aspect-ratio: 1/1;
-  position: relative;
 }
 
 .hover-img {
-  /* position: relative; */
+  position: relative;
 }
 
 .hover-btn {
   position: absolute;
-  top: 30%;
-  right: 45%;
-  color: white;
+  font-size: 5rem;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
   display: none;
 }
 
@@ -391,7 +392,7 @@ footer {
   padding: 0 0.5rem;
 }
 
-.fa-circle-play {
+.play-btn {
   font-size: 1.3rem;
 }
 
